# distil

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  HEARTBEAT.md  LICENSE  README.md  README_check_model_validator.md  REFERENCE.md  REWRITE_PLAN.md  SESSION_MEMORY.md  SOUL.md  check_model.py  check_model_validator.py  miner.py  pyproject.toml  test_miner.py  validator.py
.trash/: chat_server_vllm.py  multi_shard_analysis.py  pod_eval_vllm.py.bak.1776017973
api/: __init__.py  agent_runner.py  config.py  eval_queue.py  eval_status.py  external.py  progress.py  server.py  state_store.py
configs/: eval_policy.json
deploy/: README.md  caddy.conf  cutover.md  cutover.sh  scheduled_validator_cutover.sh  state_diff.py
distil/: README.md  __init__.py  settings.py
docs/: CUTOVER_PARITY_2026-05-15.md  FLUE_INTEGRATION.md  MINER_FAQ.md  MINING_GUIDE_V2.md  OPENCLAW_PIPELINE.md  ROADMAP.md  concurrent-vllm-design.md  sn97_bot_SOUL.md
eval/: __init__.py  chain.py  cross_tokenizer.py  dataset.py  hf_upload_meta.py  inference.py  kl_divergence.py  lium_runner.py  model_checker.py  pod.py  private_pool.py  resave_check.py  runtime.py  scoring.py  state.py  tokenizer.py
examples/: README_distil_kl_train_prebuilt.md  build_benchmark_mix_jsonl.py  distil_kl_train.py  distil_kl_train_kimi.py  distil_kl_train_prebuilt.py  remote_teacher_kd.py
frontend/: package-lock.json  package.json  tsconfig.json
knowledge/: INDEX.yaml  distillation.yaml
memory/: 2026-04-14.md
paper/: benchmark_kl_vs_performance.md  benchmarks_as_north_star.md  goodhart_audit_2026-04-27.md  mechanism_hardening.md  off_policy_cot_collapse.md
reports/: 2026-04-02-api-security.md  2026-04-02-caseus-training.md  2026-04-02-smart-challenger.md  2026-04-02-uid18-reeval-fix.md  2026-04-12-gpu-split-bug.md  2026-04-19-discord-12h-fixes.md  2026-04-19-think-probe-disabled.md  2026-04-20-discord-12h-fixes.md  2026-04-23-goodhart-immune-eval.md  2026-04-24-arena-v3.md  2026-04-24-pareto-holistic-eval-v2.md  2026-04-28-baseline-floor-and-math-v29.md  2026-04-28-discord-12h-fixes.md  2026-04-28-goodhart-deep-pass.md  2026-04-28-grief-tiebreaker-and-canary-streak.md  2026-04-28-v29.1-baseline-relative-penalty.md  2026-04-29-distillation-sota-synthesis.md  2026-04-29-eval-roadmap.md  2026-04-29-kimi-k2.6-stage2-runbook.md  2026-04-29-tweet-drafts.md  2026-04-29-v29.2-debug-bench-and-lc-fix.md  2026-04-29-v29.4-sota-capability-sweep.md  2026-04-29-v29.5-procedural-everything.md  2026-04-29-v29.6-procedural-chat-prompts.md  2026-04-29-v30-axis-additions.md  2026-04-29-v30-strategic-audit.md  2026-04-29-v30-strategic-rollup.md  2026-04-29-v30.2-rollup.md  2026-04-29-v30.3-rollup.md
results/: Qwen_Qwen3-1-7B.json  Qwen_Qwen3-5-35B-A3B.json  (+5 more)
(+330 files in other folders)
