[project]
name = "distillation"
version = "0.8.0"
description = "Bittensor subnet for moonshotai/Kimi-K2.6 model distillation (post-2026-05-02 cutover; was Qwen3.5/Qwen3.6-35B-A3B) — competitive knowledge compression"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "bittensor",
    "bittensor-wallet",
    "click",
    "datasets",
    "fastapi",
    "huggingface-hub",
    "httpx",
    "lium",
    "numpy",
    "pydantic",
    "requests",
    "rich",
    "safetensors",
    "starlette",
    "torch",
    "transformers",
    "uvicorn",
]

[project.optional-dependencies]
dev = [
    "pytest",
]
gpu = [
    "flash-attn",
]

[tool.setuptools.packages.find]
include = ["eval*", "api*"]
exclude = ["state*", "scripts*", "distillation*", "neurons*"]
