[project]
name = "distillation"
version = "0.9.0"
description = "Bittensor SN97 — Kimi-K2.6 distillation validator (clean rewrite-v2 stack under distil/)."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "bittensor",
    "bittensor-wallet",
    "click",
    "datasets",
    "fastapi",
    "huggingface-hub",
    "httpx",
    "lium.io",
    "numpy",
    "pydantic",
    "pydantic-settings",
    "requests",
    "rich",
    "safetensors",
    "starlette",
    "torch",
    "transformers",
    "uvicorn",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-subtests"]
gpu = ["flash-attn", "vllm"]

[project.scripts]
distil = "distil.cli.entry:main"

[tool.setuptools.packages.find]
# distil/ is the production stack (post 2026-05-15 cutover).
# eval/ and api/ are kept temporarily for shim compatibility and will
# be removed in a follow-up commit once the systemd units no longer
# reference them.
include = ["distil*", "eval*", "api*"]
exclude = ["state*", "scripts*", "distillation*", "neurons*", "frontend*", "tests*"]
